--- a/resume.html
+++ b/resume.html
@@ -4,8 +4,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="overallCSS.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/overallCSS.css">
     <title>ITMD-361 Internet Technologies and Web Design</title>
   </head>
   <body id="resumebody">
