got rid of old class elements

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <a href="resume.html">Resume</a>
       <a href="cyber.html">Cyber</a>
     </nav>
-    <div class="pagetitle">
+    <div>
       <h1>The Life of Mark Littlefield</h1>
     </div>
-    <div class="pagedescrip">
+    <div>
       <p>The next few section will tell you about my life. From early childhood, to middle childhood and the teen years, until finally my college experiance. </p>
     </div>
     <div>
