--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
       <div>
         <hr>
       </div>
-      <div class="summary">
+      <div>
         <h2>Summary</h2>
         <p>Seeking a Computer Information Technology position to utilize my technical knwledge and quick
           thinking to support cybersecurity. Posses the flexibility to problem solve in a changing environment
@@ -30,13 +30,13 @@
           security and reducing the vulnerabilities in infromation technology.
         </p>
       </div>
-      <div class="education">
+      <div>
         <h2>Education</h2>
         <h4>Illinois Institute of Technology Chicago, IL</h4>
         <p>Bachelor in Infromation Technology and Management Expected Compleation: May 2021</p>
         <h4>College of DuPage Glen Ellyn, IL</h4>
         <p>Associates in Applied Science Computer Information Technology Cybersecurity and Defense May 2019</p>
-        <div id="resumelist">
+        <div class="resumelist">
           <p>Certificate in Computer and Internetworking Technologies Voice over IP Telphony Specialist May 2019</p>
           <p>Certificate in Computer and Internetworking Internetworking Technician December 2019</p>
           <p>Certificate in Computer and Internetworking Internetworking CCNA Security December 2019</p>
@@ -45,21 +45,21 @@
         <p>College of DuPage Outstanding Graduate May 2019</p>
         <h4>Kishwaukee College Malta,IL</h4>
         <p>Associate in Applied Science Computer Information Scystems May 2018</p>
-        <div id="resumelist">
+        <div class="resumelist">
           <p>Certificate in Computer Programming May 2018</p>
         </div>
       </div>
-      <div class="cerification">
+      <div>
         <h2>Certifications</h2>
         <p>CompTIA Cybersecurity Analyst January 2019</p>
         <p>CompTIA Security+ August 2018</p>
         <p>Cisco Certified Network Associate June 2018</p>
         <p>CompTIA A+ June 2018</p>
       </div>
-      <div class="fexp">
+      <div>
         <h2>Field Experiance</h2>
         <h4>DoE CyberForce Competition Argonne National Laboratories Novemebrt 2018</h4>
-        <div id="resumelist">
+        <div class="resumelist">
           <p>Collaborated with peers to find best practices in hardening systems</p>
           <p>Brainstormed with a small team to determain topology and word division</p>
           <p>Assisted team members with software set up and vulnerabilities assesment</p>
@@ -69,17 +69,17 @@
           <p>Participated in live mitigation and defense</p>
         </div>
         <h4>National Cyber League Fall Season November 2018</h4>
-        <div id="resumelist">
+        <div class="resumelist">
           <p>Finished top 3%</p>
           <p>Worked on password cracking, cryptoplogy, log analysis, traffic analysis</p>
           <p>Improved upon cybersecurity and ethical hacking skills</p>
         </div>
       </div>
-      <div class="wexp">
+      <div>
         <h2>Work Experiance</h2>
         <h4>NSA Gen Cyber Security Camp Glen Ellyn,IL</h4>
         <p>Camp Assistant May 2019 - July 2019</p>
-        <div id="resumelist">
+        <div class="resumelist">
           <p>Assisted K-12 teachers in Cyber Security curriculum development</p>
           <p>Developed curriculum designed to strengthen computer and security skills</p>
           <p>Facilitated activities regarding Cybersecurity</p>
@@ -87,7 +87,7 @@
         </div>
         <h4>ESPO Systems Willowbrook, IL</h4>
         <p>Intern September 2018 - December 2018</p>
-        <div id="resumelist">
+        <div class="resumelist">
           <p>Used SSL/TLS in Symantec environment for secured communication</p>
           <p>Implemented and monitored Symantec Endpoint Protection on Windows Systems</p>
           <p>Utilized policies to enforce company security posture both through Symantec's Systems</p>
@@ -97,7 +97,7 @@
         </div>
         <h4>Zones Inc. Carol Stream, IL</h4>
         <p>Configuration Technician June 2018 - September 2018</p>
-        <div id="resumelist">
+        <div class="resumelist">
           <p>Imaged and installed software to the comstomers parameters</p>
           <p>Ensured proper configuration of electronics and devices</p>
           <p>Created and correctly placed asset tags</p>
@@ -112,10 +112,10 @@
         <p>Languages: C++, Python, Java, SQL, Bash</p>
         <p>Microsoft Office: Word, Excel, Powerpoint</p>
       </div>
-      <div class="extracur">
+      <div>
         <h2>Extra-Curricular</h2>
         <h4>College of DuPage Cyber Defense Club</h4>
-        <div id="resumelist">
+        <div class="resumelist">
           <p>Founding President in Fall 2018</p>
           <p>Create and maintain many different online resources for peers</p>
           <p>Presented small lessons in a wide range of networking and cybersecurity areas</p>
