--- a/cyber.html
+++ b/cyber.html
@@ -18,21 +18,21 @@
     <div id="cyberhead">
       <h1>Cybersecurtiy Articles</h1>
     </div>
-    <div class="pagedescrip">
+    <div>
       <p>This page holds articles that relate to cybersecurity that I found intresting.</p>
     </div>
-    <div class="parentdiv">
-      <div class="article" id="article1">
+    <div>
+      <div>
         <h2>Article From <a href="https://cyware.com/cyber-security-news-articles">CYWARE.COM</a></h2>
         <h3><a href="https://cyware.com/news/linux-servers-under-attack-by-lilocked-ransomware-e9c4f966">Linux servers under attack by Lilocked ransomware </a></h3>
         <img src="images/cyware_image.jpg" alt="Keyboard that says infected">
       </div>
-      <div class="article" id="article2">
+      <div>
         <h2>Article From <a href="https://threatpost.com/">threatpost.com</a></h2>
         <h3><a href="https://threatpost.com/million-iot-radios-hijack-telnet-backdoor/148123/">Telnet Backdoor Opens More Than 1M IoT Radios to Hijack</a></h3>
         <img src="images/threatpost_image.jpg" alt="An infcted technology web.">
       </div>
-      <div class="article" id="article3">
+      <div>
         <h2>Video From <a href="https://www.youtube.com/">YouTube</a></h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/NfJf_-7O00w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
