changed id to class

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="Stylesheet" href="css/overallCSS.css">
     <title>ITMD-361 Internet Technologies and Web Design</title>
   </head>
-  <body id="homebody">
-    <nav id="navset">
+  <body class="homebody">
+    <nav class="navset">
       <a href="index.html">Home</a>
       <a href="resume.html">Resume</a>
       <a href="cyber.html">Cyber</a>
@@ -23,7 +23,7 @@
     <div>
       <h2>Early Childhood</h2>
     </div>
-    <div id="homeimg">
+    <div class="homeimg">
       <img src="images/illinois_image.jpg" alt="Chicago Skyline display with large Illinois text in front">
     </div>
     <div>
@@ -39,9 +39,9 @@
       </p>
     </div>
     <div>
-      <h2 id="clear">Middle Childhood</h2>
+      <h2 class="clear">Middle Childhood</h2>
     </div>
-    <div id="homeimg">
+    <div class="homeimg">
       <img src="images/highschool_image.jpg" alt="The Bartlett Hawks Highschool crest on each side with a blue background and Bartlett Hawaks Highschool writen on it">
     </div>
     <div>
@@ -56,9 +56,9 @@
       </p>
     </div>
     <div>
-      <h2 id="clear">College Years</h2>
+      <h2 class="clear">College Years</h2>
     </div>
-    <div id="homeimg">
+    <div class="homeimg">
       <img src="images/college_image.jpg" alt="White background with Illinois Institute of Technology writen on it and the logo on the right side.">
     </div>
     <div>
