fix to navagation

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>ITMD-361 Internet Technologies and Web Design</title>
   </head>
   <body class="homebody">
-    <nav class="navset">
-      <a href="index.html">Home</a>
-      <a href="resume.html">Resume</a>
+    <nav id="navset">
+      <a href="index.html">Home</a> 
+      <a href="resume.html">Resume</a> 
       <a href="cyber.html">Cyber</a>
     </nav>
     <div>
