--- a/cyber.html
+++ b/cyber.html
@@ -34,7 +34,7 @@
       </div>
       <div>
         <h2>Video From <a href="https://www.youtube.com/">YouTube</a></h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/NfJf_-7O00w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/NfJf_-7O00w"></iframe>
       </div>
     </div>
   </body>
