--- a/resume.html
+++ b/resume.html
@@ -6,126 +6,126 @@
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/overallCSS.css">
-    <title>ITMD-361 Internet Technologies and Web Design</title>
+    <title>ITMD-361 Internet Technologies and Web Design: Project2</title>
   </head>
-  <body id="resumebody">
-    <nav id="navset">
+  <body >
+    <nav>
       <a href="index.html">Home</a>
       <a href="resume.html">Resume</a>
       <a href="cyber.html">Cyber</a>
     </nav>
     <div id="fixedpage">
-      <h1>Mark Littlefield Jr</h1>
-      <div id="resumeinfo">
+      <div id="nameinfo">
+        <h1>Mark Littlefield Jr</h1>
         <p>My Address | Phone: (123) 345 6789 | Email: mlittlefield@hawk.iit.edu | LinkedIn: <a href="https://www.linkedin.com">https://www.linkedin.com</a></p>
-      </div>
-      <div>
         <hr>
       </div>
-      <div>
-        <h2>Summary</h2>
+      <div class="sections">
+        <h2 class="headder">Summary</h2>
         <p>Seeking a Computer Information Technology position to utilize my technical knwledge and quick
           thinking to support cybersecurity. Posses the flexibility to problem solve in a changing environment
           and apply the appropriate technical solution. Striving to support all people by enhancing the 
           security and reducing the vulnerabilities in infromation technology.
         </p>
       </div>
-      <div>
-        <h2>Education</h2>
-        <h4>Illinois Institute of Technology Chicago, IL</h4>
+      <div class="sections">
+        <h2 class="headder">Education</h2>
+        <h4 class="subheader">Illinois Institute of Technology Chicago, IL</h4>
         <p>Bachelor in Infromation Technology and Management Expected Compleation: May 2021</p>
-        <h4>College of DuPage Glen Ellyn, IL</h4>
+        <h4 class="subheader">College of DuPage Glen Ellyn, IL</h4>
         <p>Associates in Applied Science Computer Information Technology Cybersecurity and Defense May 2019</p>
-        <div class="resumelist">
-          <p>Certificate in Computer and Internetworking Technologies Voice over IP Telphony Specialist May 2019</p>
-          <p>Certificate in Computer and Internetworking Internetworking Technician December 2019</p>
-          <p>Certificate in Computer and Internetworking Internetworking CCNA Security December 2019</p>
-          <p>Certificate in Computer and Internetworking Internetworking Cybersecurity Specialist December 2019</p>
-        </div>
         <p>College of DuPage Outstanding Graduate May 2019</p>
-        <h4>Kishwaukee College Malta,IL</h4>
+        <ul>
+          <li>Certificate in Computer and Internetworking Technologies Voice over IP Telphony Specialist May 2019</li>
+          <li>Certificate in Computer and Internetworking Internetworking Technician December 2019</li>
+          <li>Certificate in Computer and Internetworking Internetworking CCNA Security December 2019</li>
+          <li>Certificate in Computer and Internetworking Internetworking Cybersecurity Specialist December 2019</li>
+        </ul>
+        <h4 class="subheader">Kishwaukee College Malta,IL</h4>
         <p>Associate in Applied Science Computer Information Scystems May 2018</p>
-        <div class="resumelist">
-          <p>Certificate in Computer Programming May 2018</p>
-        </div>
+        <ul>
+          <li>Certificate in Computer Programming May 2018</li>
+        </ul>
       </div>
-      <div>
-        <h2>Certifications</h2>
-        <p>CompTIA Cybersecurity Analyst January 2019</p>
-        <p>CompTIA Security+ August 2018</p>
-        <p>Cisco Certified Network Associate June 2018</p>
-        <p>CompTIA A+ June 2018</p>
+      <div class="sections">
+        <h2 class="headder">Certifications</h2>
+        <ul>
+          <li>CompTIA Cybersecurity Analyst January 2019</li>
+          <li>CompTIA Security+ August 2018</li>
+          <li>Cisco Certified Network Associate June 2018</li>
+          <li>CompTIA A+ June 2018</li>
+        </ul>
       </div>
-      <div>
-        <h2>Field Experiance</h2>
-        <h4>DoE CyberForce Competition Argonne National Laboratories Novemebrt 2018</h4>
-        <div class="resumelist">
-          <p>Collaborated with peers to find best practices in hardening systems</p>
-          <p>Brainstormed with a small team to determain topology and word division</p>
-          <p>Assisted team members with software set up and vulnerabilities assesment</p>
-          <p>Hardened and secured Linux and Windows servers against red team attack</p>
-          <p>Kept ip services including HTTP, NTP, DNS, FTP and SMTP/POP#</p>
-          <p>Made documentation for setup, usage, and incident reporting</p>
-          <p>Participated in live mitigation and defense</p>
-        </div>
-        <h4>National Cyber League Fall Season November 2018</h4>
-        <div class="resumelist">
-          <p>Finished top 3%</p>
-          <p>Worked on password cracking, cryptoplogy, log analysis, traffic analysis</p>
-          <p>Improved upon cybersecurity and ethical hacking skills</p>
-        </div>
+      <div class="sections">
+        <h2 class="headder">Field Experiance</h2>
+        <h4 class="subheader">DoE CyberForce Competition Argonne National Laboratories Novemebrt 2018</h4>
+        <ul>
+          <li>Collaborated with peers to find best practices in hardening systems</li>
+          <li>Brainstormed with a small team to determain topology and word division</li>
+          <li>Assisted team members with software set up and vulnerabilities assesment</li>
+          <li>Hardened and secured Linux and Windows servers against red team attack</li>
+          <li>Kept ip services including HTTP, NTP, DNS, FTP and SMTP/POP#</li>
+          <li>Made documentation for setup, usage, and incident reporting</li>
+          <li>Participated in live mitigation and defense</li>
+        </ul>
+        <h4 class="subheader">National Cyber League Fall Season November 2018</h4>
+        <ul>
+          <li>Finished top 3%</li>
+          <li>Worked on password cracking, cryptoplogy, log analysis, traffic analysis</li>
+          <li>Improved upon cybersecurity and ethical hacking skills</li>
+        </ul>
       </div>
-      <div>
-        <h2>Work Experiance</h2>
-        <h4>NSA Gen Cyber Security Camp Glen Ellyn,IL</h4>
+      <div class="sections">
+        <h2 class="headder">Work Experiance</h2>
+        <h4 class="subheader">NSA Gen Cyber Security Camp Glen Ellyn,IL</h4>
         <p>Camp Assistant May 2019 - July 2019</p>
-        <div class="resumelist">
-          <p>Assisted K-12 teachers in Cyber Security curriculum development</p>
-          <p>Developed curriculum designed to strengthen computer and security skills</p>
-          <p>Facilitated activities regarding Cybersecurity</p>
-          <p>Supported instructors with application of material</p>
-        </div>
-        <h4>ESPO Systems Willowbrook, IL</h4>
+        <ul>
+          <li>Assisted K-12 teachers in Cyber Security curriculum development</li>
+          <li>Developed curriculum designed to strengthen computer and security skills</li>
+          <li>Facilitated activities regarding Cybersecurity</li>
+          <li>Supported instructors with application of material</li>
+        </ul>
+        <h4 class="subheader">ESPO Systems Willowbrook, IL</h4>
         <p>Intern September 2018 - December 2018</p>
-        <div class="resumelist">
-          <p>Used SSL/TLS in Symantec environment for secured communication</p>
-          <p>Implemented and monitored Symantec Endpoint Protection on Windows Systems</p>
-          <p>Utilized policies to enforce company security posture both through Symantec's Systems</p>
-          <p>Retrived updates for anti-virus from Symantec through cloud servers</p>
-          <p>Resolved problems with Symantec's instrution detection and prevention, anti-malware, anti-virus</p>
-          <p>Wored in a sandbox environment</p>
-        </div>
-        <h4>Zones Inc. Carol Stream, IL</h4>
+        <ul>
+          <li>Used SSL/TLS in Symantec environment for secured communication</li>
+          <li>Implemented and monitored Symantec Endpoint Protection on Windows Systems</li>
+          <li>Utilized policies to enforce company security posture both through Symantec's Systems</li>
+          <li>Retrived updates for anti-virus from Symantec through cloud servers</li>
+          <li>Resolved problems with Symantec's instrution detection and prevention, anti-malware, anti-virus</li>
+          <li>Wored in a sandbox environment</li>
+        </ul>
+        <h4 class="subheader">Zones Inc. Carol Stream, IL</h4>
         <p>Configuration Technician June 2018 - September 2018</p>
-        <div class="resumelist">
-          <p>Imaged and installed software to the comstomers parameters</p>
-          <p>Ensured proper configuration of electronics and devices</p>
-          <p>Created and correctly placed asset tags</p>
-          <p>Worked on small teams to quickly finish large orders</p>
-          <p>Interacted and dealt with pressing problems and concerns of supervisors</p>
-          <p>Trained new employees</p>
-        </div>
+        <ul>
+          <li>Imaged and installed software to the comstomers parameters</li>
+          <li>Ensured proper configuration of electronics and devices</li>
+          <li>Created and correctly placed asset tags</li>
+          <li>Worked on small teams to quickly finish large orders</li>
+          <li>Interacted and dealt with pressing problems and concerns of supervisors</li>
+          <li>Trained new employees</li>
+        </ul>
       </div>
-      <div>
-        <h2>Technical Skills</h2>
+      <div class="sections">
+        <h2 class="headder">Technical Skills</h2>
         <p>Cisco: Routing, Switching, Connections, and Scaling</p>
         <p>Languages: C++, Python, Java, SQL, Bash</p>
         <p>Microsoft Office: Word, Excel, Powerpoint</p>
       </div>
-      <div>
-        <h2>Extra-Curricular</h2>
-        <h4>College of DuPage Cyber Defense Club</h4>
-        <div class="resumelist">
-          <p>Founding President in Fall 2018</p>
-          <p>Create and maintain many different online resources for peers</p>
-          <p>Presented small lessons in a wide range of networking and cybersecurity areas</p>
-          <p>Taught peers how to create tow virtual servers, multiple virtual machines, and set up running services on the virtual machines</p>
-          <p>Communicated with student life about any club related problems</p>
-          <p>Coordinated large events with student life</p>
-          <p>Contacted potential speakers to talk about the cybersecurity field</p>
-          <p>Participated in cyber Compitions</p>
-          <p>Organize teams to participate in the team based cyber compitions together</p>
-        </div>
+      <div class="sections">
+        <h2 class="headder">Extra-Curricular</h2>
+        <h4 class="subheader">College of DuPage Cyber Defense Club</h4>
+        <ul>
+          <li>Founding President in Fall 2018</li>
+          <li>Create and maintain many different online resources for peers</li>
+          <li>Presented small lessons in a wide range of networking and cybersecurity areas</li>
+          <li>Taught peers how to create tow virtual servers, multiple virtual machines, and set up running services on the virtual machines</li>
+          <li>Communicated with student life about any club related problems</li>
+          <li>Coordinated large events with student life</li>
+          <li>Contacted potential speakers to talk about the cybersecurity field</li>
+          <li>Participated in cyber Compitions</li>
+          <li>Organize teams to participate in the team based cyber compitions together</li>
+        </ul>
       </div>
     </div>
   </body>
